After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 647833 - matroskademux: bad at guessing the framerate
matroskademux: bad at guessing the framerate
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 0.10.29
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-04-15 05:48 UTC by David Schleef
Modified: 2011-04-15 11:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
better calculation of framerate in matroskademux (3.00 KB, patch)
2011-04-15 06:26 UTC, David Schleef
committed Details | Review

Description David Schleef 2011-04-15 05:48:37 UTC
gst-launch videotestsrc num-buffers=100 ! video/x-raw-yuv,framerate=60/1,width=640,height=360 ! x264enc ! matroskamux ! filesink location=out.mkv

Creates a file with framerate 500000000/8333333.
Comment 1 David Schleef 2011-04-15 06:26:42 UTC
Created attachment 185996 [details] [review]
better calculation of framerate in matroskademux

This patch first guesses that the framerate is an integer, small fraction, or N/1001, the falls back to previous method.
Comment 2 Sebastian Dröge (slomo) 2011-04-15 08:52:48 UTC
Comment on attachment 185996 [details] [review]
better calculation of framerate in matroskademux

Looks good to me but maybe make the array static const and we should probably add this function to libgstvideo after the release.
Comment 3 Tim-Philipp Müller 2011-04-15 11:31:11 UTC
Comment on attachment 185996 [details] [review]
better calculation of framerate in matroskademux

Also changed the GST_ERROR into a GST_INFO.