matroskademux: Better calculation of framerate

https://bugzilla.gnome.org/show_bug.cgi?id=647833